--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-        <img src="imagenes/Travel-logo1.png" alt="logo empresa" width="150" margin-left="20">
+        <img src="imagenes/logo2-Travel.png" alt="logo empresa" width="150" margin-left="20">
         </div>
         <nav>
             <a href="index.html"height: 20px>Inicio</a>
@@ -27,7 +27,34 @@
             <h3>Más que un viaje, una experiencia</h3>
         <!-- <img src="https://media.istockphoto.com/id/858917054/es/foto/amigos-feliz-viaje-expedici%C3%B3n-concepto.jpg?s=612x612&w=0&k=20&c=uJtvCXOlyeq8BvkG09h8GfQxnJy-dOdHPk95jEbnans=" alt="fondo texto"> -->
         </div>
+        <div class="texto-nosotros">
+            <p>
+                Bienvenidos a Travel+, tu socio de confianza para explorar el mundo. Somos una empresa de viajes y turismo comprometida con ofrecerte experiencias de viaje únicas y memorables. Nuestra misión es transformar cada viaje en una aventura personalizada, adaptada a tus deseos y necesidades.
+            </p>
+            <h4>NUESTRA HISTORIA</h4>
+            <P>Travel+ nació en el año 1989 de la pasión por descubrir nuevos horizontes y compartir ese entusiasmo con los demás. Con 35 años de experiencia en el sector, hemos crecido hasta convertirnos en lo que somos hoy en día, ofreciendo servicios de alta calidad que abarcan desde vuelos y alojamiento hasta experiencias culturales y aventuras únicas en los destinos más fascinantes del mundo.</P>
+            <h4>NUESTRA FILOSOFÍA</h4>
+            <p>En Travel+, creemos que cada viaje es una oportunidad para vivir nuevas experiencias, aprender y conectar con diferentes culturas. Nos esforzamos por hacer que cada uno de tus viajes sea más que una simple visita turística; queremos que sea una vivencia enriquecedora que te deje recuerdos imborrables.</p>
+            <h4>LO QUE NOS HACE ÚNICOS</h4>
+            <figure class="caracteristica1">
+                <p>ATENCIÓN PERSONALIZADA</p>
+                <P>Sabemos que cada viajero es único. Por eso, trabajamos contigo para diseñar el viaje perfecto, cuidando cada detalle desde el primer momento.</P>
+            </figure>
+            <figure class="caracteristica2">
+                <p>AMPLIA GAMA DE SERVICIOS</p>
+                <p> Ofrecemos una completa variedad de servicios, que incluyen paquetes turísticos, viajes a medida, tours guiados, y asistencia personalizada 24/7.</p>
+            </figure>
+            <figure class="caracteristica3">
+                <p>EXPERIENCIAS EXCLUSIVAS</p>
+                <p> Nos especializamos en crear experiencias exclusivas que te permiten descubrir destinos de una manera auténtica y enriquecedora.</p>
+            </figure>
 
+            <h4>NUESTRO COMPROMISO</h4>
+            <p>En Travel+, tu satisfacción es nuestra prioridad. Nos comprometemos a brindarte la mejor calidad en cada aspecto de tu viaje, desde el momento en que empiezas a planearlo hasta que regresas a casa con una maleta llena de recuerdos.
+
+                Explora con nosotros y descubre por qué Travel+ es más que un viaje, es una experiencia que suma valor a tu vida. ¡Viaja más, vive más con Travel+!</p>
+
+        </div>
 
 
 
@@ -69,7 +96,7 @@
             <p>TRAVEL+</p>
             <div>
             <img src="imagenes/logo ubicacion.png" alt="logo ubicacion" width="30">
-            <p> Córdoba 1256 - Rosario, Argentina</p>
+            <a href="https://www.google.com/maps/place/C%C3%B3rdoba+1256,+S2000AWR+Rosario,+Santa+Fe/@-32.9459744,-60.6430426,17z/data=!3m1!4b1!4m6!3m5!1s0x95b7ab178053ffb9:0x9e9d0d6b214378cf!8m2!3d-32.9459744!4d-60.6404677!16s%2Fg%2F11f6nch_8_?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D"> Córboba 1256 - Rosario, Argentina</a>
             </div>
                 <p> HORARIO DE ATENCIÓN</p>
                 <p>Lunes a Viernes de 09 a 18 hs</p>
